Bug 364452 - Regression: after updating frameworks and plasma kmail is missing the "task" icon
Summary: Regression: after updating frameworks and plasma kmail is missing the "task" ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.2.1
Platform: Other Linux
: NOR normal
Target Milestone: 15.08
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-18 12:23 UTC by Christian (Fuchs)
Modified: 2016-06-27 06:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments
Screenshot of the issue, mind that it is not only missing in the filter, but also in the list itself. (27.49 KB, image/png)
2016-06-18 12:23 UTC, Christian (Fuchs)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2016-06-18 12:23:11 UTC
In addition to Bug 364449: 

After updating to plasma 5.6.5.1 and frameworks 5.23 kmail is missing the icon for "task" e-mails. See the attached screenshot for details. It is lacking in both the filter and also if you add it as a column / in the settings for the column. It is not missing in the context menu.

Reproducible: Always 

Steps to Reproduce: 
1. Update to the mentioned frameworks and plasma versions
2. Start kmail 
3. Either open the column settings or have a "task" icon configured

Actual Results: Icons are missing

Expected Results: Icons are there

kmail is from kdepim 16.04.2

Reproducible: Always
Comment 1 Christian (Fuchs) 2016-06-18 12:23:40 UTC
Created attachment 99566 [details]
Screenshot of the issue, mind that it is not only missing in the filter, but also in the list itself.
Comment 2 andreas 2016-06-26 21:25:24 UTC
I add the three missing kmail icons mail-deleted, mail-thread-ignored and mail-thread-watch the problem is only that kmail don't select this icons from the icon theme (system settings) kmail use the icons shiped from the kmail repository (kdepim/kmail/src/pics) would be good if it could be changed in the source.

at my installation the task icon was available.
Comment 3 Christian (Fuchs) 2016-06-26 21:27:07 UTC
Thank you very much for looking into and fixing both of these! 

Kind regards, 

Christian
Comment 4 Laurent Montel 2016-06-27 04:41:14 UTC
Git commit 680556e11b6cc7d23eaa8e97bb33334d923dbbd3 by Montel Laurent.
Committed on 27/06/2016 at 04:41.
Pushed by mlaurent into branch 'master'.

Remove it from source. Defined in breeze-oxygen now

M  +0    -3    kmail/src/pics/CMakeLists.txt
D  +-    --    kmail/src/pics/mail-deleted.png
D  +-    --    kmail/src/pics/mail-thread-ignored.png
D  +-    --    kmail/src/pics/mail-thread-watch.png

http://commits.kde.org/kdepim/680556e11b6cc7d23eaa8e97bb33334d923dbbd3
Comment 5 Laurent Montel 2016-06-27 04:49:43 UTC
Git commit 6b52d29392a88777ed4b862168f3c40495eecec5 by Montel Laurent.
Committed on 27/06/2016 at 04:49.
Pushed by mlaurent into branch 'master'.

Fix Bug 364452 - Regression: after updating frameworks and plasma kmail is missing the "task" icon

FIXED-IN: 5.3.0

M  +2    -2    messagelist/src/core/manager.cpp
M  +2    -2    messagelist/src/core/widgets/searchlinestatus.cpp
D  +-    --    messagelist/src/pics/mail-deleted.png
D  +-    --    messagelist/src/pics/mail-thread-ignored.png
D  +-    --    messagelist/src/pics/mail-thread-watch.png

http://commits.kde.org/messagelib/6b52d29392a88777ed4b862168f3c40495eecec5
Comment 6 andreas 2016-06-27 06:18:29 UTC
Whow thats fast laurent