Fix Bug 364452 - Regression: after updating frameworks and plasma kmail is missing the "task" icon

FIXED-IN: 5.3.0
BUG: 364452